se cambia tipografia titulo

--- a/card.html
+++ b/card.html
@@ -11,7 +11,7 @@
        
         <div class="card-body">
           <div class="title">
-          <h2 class="card-title">Presentacion</h2>
+          <h2 class="card-title">Sari</h2>
         </div>
           <p class="card-text">Mi nombre es Sara, soy Contadora y Pastelera
             Ahora estoy descubriendo la programacion y me encanta.
@@ -32,4 +32,4 @@
         </div>
 
 
-      style="width: 15rem; margin: 1px; padding: 1px;display:center; color: deeppink;align-items: justify-self;"
+      
